--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   path_provider: ^1.5.1
   flip_card: ^0.4.4
+  pull_to_refresh: ^1.5.7
 
 dev_dependencies:
   flutter_test:
